`Update package.json with new dependencies and scripts`

--- a/package.json
+++ b/package.json
@@ -4,16 +4,30 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "build": "tsc",
         "dev": "ts-node src/index.ts",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "nyc ts-mocha --recursive --parallel --reporter spec test"
     },
     "keywords": [],
     "author": "carlos-paezf",
     "license": "ISC",
     "dependencies": {
+        "bull": "^4.16.5",
+        "express": "^4.21.2",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.9.5",
         "ts-node": "^10.9.2"
     },
     "devDependencies": {
+        "@types/chai": "^5.0.1",
+        "@types/express": "^5.0.0",
+        "@types/jsonwebtoken": "^9.0.7",
+        "@types/mocha": "^10.0.10",
+        "@types/supertest": "^6.0.2",
+        "chai": "^5.1.2",
+        "nyc": "^17.1.0",
+        "supertest": "^7.0.0",
+        "ts-mocha": "^10.0.0",
         "typescript": "^5.7.3"
     }
 }
