--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "clean": "rm -r dist",
         "build": "tsc",
-        "dev": "ts-node src/index.ts",
-        "test": "nyc ts-mocha --recursive --parallel --reporter spec test"
+        "test": "nyc ts-mocha --recursive --parallel test/**/*.spec.ts"
     },
     "keywords": [],
     "author": "carlos-paezf",
@@ -16,18 +16,19 @@
         "express": "^4.21.2",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.9.5",
-        "ts-node": "^10.9.2"
+        "nyc": "^17.1.0"
     },
     "devDependencies": {
         "@types/chai": "^5.0.1",
+        "@types/expect": "^24.3.2",
         "@types/express": "^5.0.0",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/mocha": "^10.0.10",
         "@types/supertest": "^6.0.2",
-        "chai": "^5.1.2",
-        "nyc": "^17.1.0",
+        "chai": "^4.5.0",
+        "mocha": "^10.8.2",
         "supertest": "^7.0.0",
         "ts-mocha": "^10.0.0",
-        "typescript": "^5.7.3"
+        "ts-node": "^10.9.2"
     }
 }
