--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "express": "^4.21.2",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.9.5",
+        "nodejs_tdd": "file:",
         "nyc": "^17.1.0"
     },
     "devDependencies": {
